<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
	    <CheckBoxPreference
	    	android:defaultValue="true"
	        android:key="pref_allow_geofencing"
	        android:summary="@string/preference_geofencing_description"
	        android:title="@string/preference_geofencing" />
	    
	    <CheckBoxPreference
	    	android:defaultValue="false"
	        android:key="pref_allow_device_admin"
	        android:summary="@string/preference_device_admin_description"
	        android:title="@string/preference_device_admin" />
	    
	    <CheckBoxPreference
	        android:defaultValue="true"
	        android:key="pref_allow_notifications"
	        android:summary="@string/preference_show_notifications_description"
	        android:title="@string/preference_show_notifications" />

	    <CheckBoxPreference
	        android:defaultValue="false"
	        android:key="pref_allow_vibrate"
	        android:summary="@string/preference_vibrate_description"
	        android:title="@string/preference_vibrate" />

	    <EditTextPreference
	    	android:key="pref_audio_alarm_length"
	    	android:defaultValue="30"
	        android:summary="@string/preference_alarm_length_description"
	        android:title="@string/preference_alarm_length"
	        android:inputType="number" />
    </PreferenceCategory>

    <PreferenceCategory android:title="SMS">
	    <CheckBoxPreference
	        android:defaultValue="true"
	        android:key="pref_allow_sms_commands"
	        android:summary="@string/preference_allow_sms_commands_description"
	        android:title="@string/preference_allow_sms_commands" />

	    <EditTextPreference
	        android:key="pref_sms_command_password"
	        android:summary="@string/preference_command_password_description"
	        android:title="@string/preference_command_password"
	        android:inputType="textPassword"
	        android:dependency="pref_allow_sms_commands"
            android:maxLength="136"/>
	    
		<EditTextPreference
	    	android:key="pref_sms_default_receiver"
	        android:summary="@string/preference_sms_receiver_description"
	        android:title="@string/preference_sms_receiver"
	        android:inputType="phone" />
	</PreferenceCategory>

</PreferenceScreen>
